--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "passport-angellist",
   "version": "0.1.0",
   "description": "AngelList authentication strategy for Passport.",
-  "author": "Jared Hanson <jaredhanson@gmail.com> (http://www.jaredhanson.net/)",
+  "author": { "name": "Jared Hanson", "email": "jaredhanson@gmail.com", "url": "http://www.jaredhanson.net/" },
   "repository": {
     "type": "git",
-    "url": "http://github.com/jaredhanson/passport-angellist.git"
+    "url": "git://github.com/jaredhanson/passport-angellist.git"
+  },
+  "bugs": {
+    "url": "http://github.com/jaredhanson/passport-angellist/issues"
   },
   "main": "./lib/passport-angellist",
   "dependencies": {
-    "passport-oauth": ">= 0.1.0"
+    "pkginfo": "0.2.x",
+    "passport-oauth": "0.1.x"
+  },
+  "devDependencies": {
+    "vows": "0.6.x"
   },
   "engines": { "node": ">= 0.4.0" },
+  "licenses": [ {
+    "type": "MIT",
+    "url": "http://www.opensource.org/licenses/MIT" 
+  } ],
   "keywords": ["passport", "angellist", "auth", "authn", "authentication", "identity"]
 }
